--- a/Front-end/voting_front/src/App.css
+++ b/Front-end/voting_front/src/App.css
@@ -15,6 +15,7 @@
   /* colors */
 
   --first-color: hsl(201.2,27.9%,12%);
+  --bblack-color: rgb(14, 19, 19);
   --first-color-second: hsl(190, 64%, 22%);
   --first-color-alt: hsl(190, 64%, 15%);
   --title-color: hsl(190, 64%, 18%);
@@ -28,6 +29,7 @@
 
   --warnin-color:hsl(32.2,72.5%,58.6%);
   --alert-color:hsl(357.7,63.6%,51.6%);
+  --valide-color:rgb(53, 210, 61);
   --black-color:hsl(201.2,27.9%,12%);
   --black_2-color:hsl(201.4,14.6%,18.8%);
   --black_3-color: hsl(190.5,51.3%,15.3%);
@@ -67,7 +69,7 @@ a {
   color: var(--white-color);
 }
 
-button, input {
+/* button, */ input {
   border: none;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
