--- a/Front-end/voting_front/src/App.css
+++ b/Front-end/voting_front/src/App.css
@@ -77,12 +77,16 @@ a {
 
 .App {
   text-align: center;
- /* display: flex;*/
+ /* display: flex; */
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
-
+}
+.Register_set{
+  display: flex;
+  
+  justify-content: center;
 }
 .body_per{
   display: flex;
